# spire-game-server-old

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  settings.yaml  vcpkg.json
spire/core/: numbers.hpp  units.hpp
src/spire/: main.cpp
src/spire/component/: CMakeLists.txt  character_components.hpp  network_components.hpp  physics_components.hpp  world_components.hpp
src/spire/component/physics/: transform.hpp  velocity.hpp
src/spire/container/: CMakeLists.txt  concurrent_queue.hpp
src/spire/core/: CMakeLists.txt  heart_beater.cpp  heart_beater.hpp  heartbeater.cpp  heartbeater.hpp  random.hpp  setting.cpp  setting.hpp  settings.cpp  settings.hpp  timer.cpp  timer.hpp  types.hpp  units.hpp
src/spire/handler/: CMakeLists.txt  auth_handler.cpp  auth_handler.hpp  handler_controller.hpp  net_handler.cpp  net_handler.hpp  types.hpp
src/spire/net/: CMakeLists.txt  client.cpp  client.hpp  connection.cpp  connection.hpp  district.cpp  district.hpp  heartbeat.cpp  heartbeat.hpp  heartbeater.cpp  heartbeater.hpp  message.cpp  message.hpp  message_handler.hpp  room.cpp  room.hpp  server.cpp  server.hpp
src/spire/net/handler/: message_handler.hpp  waiting_room_message_handler.cpp  waiting_room_message_handler.hpp
src/spire/room/: CMakeLists.txt  admin_room.cpp  admin_room.hpp  waiting_room.cpp  waiting_room.hpp
src/spire/server/: CMakeLists.txt  district.hpp  room.hpp  server.cpp  server.hpp
src/spire/system/: CMakeLists.txt  physics_system.hpp
tool/ping/: CMakeLists.txt  main.cpp
